@@ -1,3 +1,7 @@
+drkns 24.06.2016 23:19:28 +0200 - build 4725
+
+1. С форума: при запуске программ индикатор административных прав почему-то остаётся на экране.
+
 drkns 24.06.2016 01:39:45 +0200 - build 4724
 
 1. Продолжение 4723 - исключение для ShiftEnter и поддержка run as.
